added education section

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -13,7 +13,7 @@
     "description": "This is a project made to learn the React Concepts and API integration.",
     "skills": ["React", "CSS","Springboot","Mysql"],
     "demo": "#",
-    "source": "#"
+    "source": "https://github.com/amanDev1437/React/tree/main/05-travel-list"
   },
   {
     "title": "Ecommerce Websites",
